--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,16 @@
-body {
-  background-color: aqua;
+.highlight {
+  color: orange;
 }
-h1 {
-  color: magenta;
+/* no space means this applies to aside tags that have a class of highlight */
+aside.highlight {
+  background-color: black
 }
-p {
-  color: gray;
+#homepage{
+  width: 80%;
+  margin: auto;
+  border: 2px solid black;
 }
-aside p {
-  color: black;
-}
-footer a {
+a:hover {
   color: red;
+  font-size: 2em;
 }
