--- a/styles/style.css
+++ b/styles/style.css
@@ -1,16 +1,23 @@
-.highlight {
-  color: orange;
-}
-/* no space means this applies to aside tags that have a class of highlight */
-aside.highlight {
-  background-color: black
-}
-#homepage{
-  width: 80%;
-  margin: auto;
-  border: 2px solid black;
-}
-a:hover {
+h1:hover {
   color: red;
+}
+a:visited {
+  text-decoration: none;
+}
+header {
+  width: 90%;
+  margin: auto;
+  text-align: center;
+}
+article {
+  width: 50%;
+  margin: auto;
+  text-align: center;
+}
+p::first-letter {
   font-size: 2em;
+}
+footer {
+  border: 2px solid black;
+  border-radius: 25px;
 }
